Added: catalog page, functionality for searching  avaliable equipment and renting it.

--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -97,7 +97,9 @@ form {
 .button-regular:active{
     transform: translateY(1px);
 }
-
+.button-regular:disabled{
+    
+}
 .button-danger{
     padding: 8px 14px;
     padding: 12px;
@@ -119,8 +121,9 @@ form {
 .button-danger:active{
     transform: translateY(1px);
 }
-
-
+.button-danger:disabled{
+    
+}
 /* Select status TODO  */ 
 select {
     width: 100%;
@@ -155,4 +158,53 @@ select:focus {
 }
 .select-status[data-status="Completed"] .order-status {
     border-color: #10b981;
+}
+
+ul {
+  list-style: none; 
+  gap: 20px;
+  padding: 0;
+  margin: 0; 
+}
+li {
+  padding: 1rem; 
+}
+
+.list-row{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    width: 100%;
+}
+.list-row select{
+    flex:1;
+    width: auto;
+}
+.list-row input{
+    flex:1;
+    width: auto;
+    max-width: 80px;
+}
+.span_major{
+    font-weight: 600;
+    font-size: 25px;
+    color: var(--color-text);
+}
+.span_minor{
+    font-weight: 600;
+    font-size: 20px;
+    color: var(--color-muted);
+}
+.unavailable{
+    font-weight: 600;
+    color:var(--color-danger);
+    min-width: 100px;
+    text-align: right;
+    justify-self: center;
+}
+.available{
+    font-weight: 600;
+    color: #10b981;
+    min-width: 100px;
+    justify-self: center;
 }
